# Soft-Neck-Stabilization

./: CMakeLists.txt  README.md
lib/sensor-integration/: imu3dmgx510.cpp
main/: fractional-order-controller.cpp  indentification-system.cpp  pid-controller.cpp  soft-robot-trajectory.cpp
